--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,53 +43,9 @@ jobs:
       - name: Build for macOS (aarch64)
         run: GOOS=darwin GOARCH=arm64 CGO_ENABLED=0 go build -ldflags "-w -s" -o dist/osssh-darwin-arm64 cmd/osssh/osssh.go
 
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Linux Binary (amd64)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/osssh-linux-amd64
-          asset_name: osssh-linux-amd64
-          asset_content_type: application/octet-stream
-
-      - name: Upload Linux Binary (aarch64)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/osssh-linux-arm64
-          asset_name: osssh-linux-arm64
-          asset_content_type: application/octet-stream
-
-      - name: Upload macOS Binary (amd64)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/osssh-darwin-amd64
-          asset_name: osssh-darwin-amd64
-          asset_content_type: application/octet-stream
-
-      - name: Upload macOS Binary (aarch64)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/osssh-darwin-arm64
-          asset_name: osssh-darwin-arm64
-          asset_content_type: application/octet-stream
